[package]
name = "paddler_openai_conformance"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
yaml-rust2 = { workspace = true }

[lints]
workspace = true
