[package]
name = "paddler_preprocessing"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
paddler_types = { workspace = true }
