[package]
name = "paddler_second_brain_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Desktop GUI for Paddler Second Brain"
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
iced = { workspace = true }
if-addrs = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
paddler = { workspace = true }
paddler_types = { workspace = true }
statum = { workspace = true }
tokio = { workspace = true }

[features]
default = []
web_admin_panel = ["paddler/web_admin_panel"]
