[package]
name = "paddler_test_cluster_harness"
authors.workspace = true
description = "Shared balancer-API-facing test harness for Paddler integration tests"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
paddler_client = { workspace = true }
paddler_messaging = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
